verified db and repos, removed discrpencies, all endpoints working (including screening)